@startuml class-diagram
left to right direction
skinparam ArrowFontSize 10

' -- Base User and Derived Roles --
class User {
  +id: uint
  +firstName: string
  +lastName: string
  +email: string
  +password: string
  +phoneNumber: string
  +publicWalletAddress: string
  +isActive: boolean
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class Admin {
  +manageUsers()
  +overseeSystem()
  +monitorProcesses()
}

class Entrepreneur {
  +submitProposal()
  +viewOffers()
}

class Tender {
  +createOffer()
  +manageOffers()
}

class Expert {
  +evaluateProposal()
}

class Role {
  +id: uint
  +name: string
  +roleTxHash: string        
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

' -- Business Entities --
class Sector {
  +id: uint
  +code: string
  +description: string
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class Offer {
  +id: uint
  +tenderNumber: string
  +contractAddress: string
  +proposalSubmissionStart: time.Time
  +proposalSubmissionEnd: time.Time
  +proposalReviewStart: time.Time
  +proposalReviewEnd: time.Time
  +minQualificationLevel: string
  +status: string
  +createdBy: uint
  +sectorID: uint
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class Proposal {
  +id: uint
  +contractID: uint
  +proposerID: uint
  +details: string
  +status: string
  +submittedAt: time.Time
  +proposalTxHash: string   
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class ExpertEvaluation {
  +id: uint
  +proposalID: uint
  +expertID: uint
  +score: float
  +comment: string
  +reviewTxHash: string     
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class Qualification {
  +id: uint
  +sectorID: uint
  +level: string
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class UserQualification {
  +id: uint
  +userID: uint
  +qualificationID: uint
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

class Document {
  +id: uint
  +documentType: string
  +documentPath: string
  +documentableID: uint
  +documentableType: string
  +createdAt: time.Time
  +updatedAt: time.Time
  +deletedAt: time.Time
}

' -- Inheritance --
User <|-- Admin
User <|-- Entrepreneur
User <|-- Tender
User <|-- Expert

' -- Associations --
User "*" -- "*" Role                  : has
Role "*" -- "*" User                  : assignedTo

User "1" -- "*" UserQualification      : qualifications
UserQualification "*" -- "1" Qualification : refersTo
UserQualification "1" -- "*" Document      : evidence

Tender "1" -- "*" Offer  : creates
User "1" -- "*" Offer                 : createdOffers
Offer "*" -- "1" Sector               : belongsTo
Sector "1" -- "*" Qualification       : defines

Entrepreneur "1" -- "*" Proposal      : submits
Offer "1" -- "*" Proposal             : receives
Proposal "1" -- "*" Document          : attachments

Expert "1" -- "*" ExpertEvaluation    : evaluates
Proposal "1" -- "*" ExpertEvaluation  : evaluatedBy
ExpertEvaluation "*" -- "1" Expert    : expert

Offer "1" -- "*" Document             : attachments
Offer "*" -- "1" Qualification : MinQualification

@enduml
